@@ -6,6 +6,8 @@
 
 ADDED:
 
+* Added information about the Python version to the default footer
+
 CHANGED:
 
 DEPRECATED:
